# news-feed

./: CHANGELOG.md  Cargo.toml  HANDOFF.md  README.md
src/: cli.rs  config.rs  discovery.rs  feed_parser.rs  gui.rs  main.rs  storage.rs  syncer.rs
