[package]
name = "nimbus"
version = "0.1.0"
edition = "2021"
description = "Nimbus feed reader for desktop and CLI"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
dirs = "5.0"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "blocking", "json", "gzip", "brotli", "deflate", "zstd", "cookies"] }
roxmltree = "0.20"
scraper = "0.19"
rusqlite = { version = "0.31", features = ["bundled", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.5"
notify-rust = "4.11"
webbrowser = "1.0"
eframe = "0.27"
tray-icon = { version = "0.21", optional = true }
gtk = { version = "0.18", optional = true }
rfd = { version = "0.15", optional = true }

[features]
default = ["gui"]
gui = ["tray-icon", "gtk", "rfd"]
